# xxx

./: README.md  buildall.sh  run.sh  system-stats.py
dag-tools/: Main.hs  dag-tools.cabal
group-eqs/: Main.hs  group-eqs.cabal
sym-to-cnf/: README  sym-to-cnf.cabal  test.sh
sym-to-cnf/src/: BDD.hs  CNF.hs  CheckRes.hs  RandomSym.hs  SymToCNF.hs  Symbol.hs  Tseitin.hs  Types.hs
system-tools/: Main.hs  stats.py  system-tools.cabal
