
name:                dag-tools
version:             0.1.0.0
author:              Max Taldykin
maintainer:          jorpic@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable dag-tools
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -O2

  build-depends:
    base >=4.7 && <4.8,
    containers

  default-extensions:
    LambdaCase
