name:                group-eqs
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          jorpic@gmail.com
build-type:          Simple
cabal-version:       >=1.10


executable group-eqs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    random == 1.0.*

  default-extensions:
    LambdaCase
