name:                sym-to-cnf
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          jorpic@gmail.com

build-type:          Simple
cabal-version:       >=1.10


executable random-sym
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  main-is:             RandomSym.hs

  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    optparse-applicative == 0.7.*,
    mwc-random == 0.13.*

  default-extensions: TupleSections


executable sym-to-cnf
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  main-is:             SymToCNF.hs

  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    optparse-applicative == 0.7.*,
    transformers == 0.3.*,
    text == 1.1.*

  default-extensions:
    LambdaCase, RecordWildCards, TupleSections


