name:                sym-to-cnf
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          jorpic@gmail.com

build-type:          Simple
cabal-version:       >=1.10


executable random-sym
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts -funbox-strict-fields
  hs-source-dirs:      src
  main-is:             RandomSym.hs

  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    optparse-applicative == 0.8.*,
    mwc-random == 0.13.*

  default-extensions: TupleSections


executable sym-to-cnf
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts
  hs-source-dirs:      src
  main-is:             SymToCNF.hs

  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    optparse-applicative == 0.8.*,
    obdd == 0.3.1,
    split == 0.2.*,
    transformers == 0.3.*,
    text == 1.1.*

  default-extensions:
    OverloadedStrings, LambdaCase, TupleSections


executable check-res
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts
  hs-source-dirs:      src
  main-is:             CheckRes.hs

  build-depends:
    base >=4.6 && <4.7,
    containers == 0.5.*,
    split == 0.2.*,
    text == 1.1.*

  default-extensions:
    OverloadedStrings, LambdaCase
