
name:                system-tools
version:             0.1.0.0
author:              Max Taldykin
maintainer:          jorpic@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable system-tools
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options: -Wall -O2
  build-depends:
    base >=4.6 && <4.8,
    containers == 0.5.*
  default-language:    Haskell2010
  default-extensions:
    LambdaCase, TupleSections
